--- a/Reserva_Vehiculos/Views/EntregaVehiculo/EntregaVehiculo.cshtml
+++ b/Reserva_Vehiculos/Views/EntregaVehiculo/EntregaVehiculo.cshtml
@@ -13,8 +13,8 @@
         <div class="row row-divider">
             <div class="col-md-4">
                 <div class="form-group mb-5">
-                    <input type="text" class="form-control form-control-lg" name="fk_num_placa"  id="placa" style="height: 50px;"
-                        placeholder="Placa del vehículo Reservado" required>
+                    <input type="text" class="form-control form-control-lg" name="fk_num_placa" id="placa"
+                        style="height: 50px;" placeholder="Placa del vehículo Reservado" required>
                 </div>
             </div>
             <div class="col-md-2">
@@ -22,7 +22,8 @@
             </div>
             <div class="col-md-3" style="justify-content: right; text-align: right;">
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-lg btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-lg btn btn-success" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
                     Datos adicionles reserva
                 </button>
 
@@ -62,7 +63,13 @@
             <tbody>
             </tbody>
         </table>
-
+ <div id="entregaVehiculo">
+        <!-- Otros campos del formulario -->
+        
+        <input type="hidden" name="id_reserva_temp" id="id_reserva_temp" value="">
+        
+        <!-- Más campos y scripts del formulario -->
+    </div>
         <script>
             $(document).ready(function () {
                 $('#buscarBtn').click(function (e) {
@@ -80,6 +87,9 @@
                             if (response.success) {
                                 var vehiculo = response.data;
                                 tbody.append('<tr><td>' + vehiculo.num_placa + '</td><td>' + vehiculo.modelo + '</td><td>' + vehiculo.num_chasis + '</td><td>' + vehiculo.modelo_motor + '</td><td>' + vehiculo.cilindraje + '</td><td>' + vehiculo.tipo_vehiculo + '</td></tr>');
+
+                                // Actualizar el valor del campo oculto con id_reserva_temp
+                                $('#id_reserva_temp').val(vehiculo.id_reserva_temp);
                             } else {
                                 tbody.append('<tr><td colspan="6">' + response.message + '</td></tr>');
                             }
@@ -133,6 +143,7 @@
                         </select>
                         <label for="floatingUbicacion">Ubicación</label>
                         <input type="hidden" name="ubicacion" id="ubicacion">
+
                     </div>
                 </div>
             </div>
