Se agrego la ubicacion a la vista confirmar reserva

--- a/Reserva_Vehiculos/Views/Reserva/Reserva_.cshtml
+++ b/Reserva_Vehiculos/Views/Reserva/Reserva_.cshtml
@@ -44,7 +44,7 @@
              
                             <tr>
                                 <td>
-                                    Lugar de Retiro: <br>
+                                    Lugar de Retiro: @item.ubicacion_final <br>
                                     Fecha de Retiro: @item.fecha_ini <br>
                                     Fecha de Devolución: @item.fecha_fin <br>
                                     Hora de Retiro: @item.hora_ini <br>
