Se agrego enviar por corre el pdf

--- a/Reserva_Vehiculos/Views/EntregaVehiculo/EntregaVehiculo.cshtml
+++ b/Reserva_Vehiculos/Views/EntregaVehiculo/EntregaVehiculo.cshtml
@@ -9,7 +9,7 @@
 <form asp-action="EntregaVehiculo" asp-controller="EntregaVehiculo" method="post">
 
     <div id="entregaVehiculo">
-        <h1 id="titulo">Información de entrega del vehículo</h1><br><br>
+        <h1 id="titulo">Información de Devolucion del vehículo</h1><br><br>
         <div class="row row-divider">
             <div class="col-md-4">
                 <div class="form-group mb-5">
