--- a/Reserva_Vehiculos/Views/ListadoReserva/MisReservas.cshtml
+++ b/Reserva_Vehiculos/Views/ListadoReserva/MisReservas.cshtml
@@ -38,7 +38,6 @@
             </tr>
         }
     </table>
-    <form asp-action="Pdf_Listado_Reservas" asp-controller="ListadoReserva" method="post">
-        <button type="submit" class="btn btn-primary btn-lg">Guardar</button>
-    </form>
+    <a href="@Url.Action("peticion", "Peticion")" class="btn btn-primary btn-lg">Volver</a>
+
 </div>
