--- a/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
+++ b/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Reserva_Vehiculos.styles.css" asp-append-version="true" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -40,7 +43,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="EntregaVehiculo"
-                                    asp-action="EntregaVehiculo">Entrega Vehiculos</a>
+                                    asp-action="EntregaVehiculo">Devolucion Vehiculos</a>
                             </li>
 
                             <li class="nav-item">
