--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -159,18 +159,20 @@
     var message = TempData["Message"] as string;
 }
 
-@await Html.PartialAsync("_AlertModal", message)
-
 <!-- El resto del contenido de tu vista -->
 
 @if (!string.IsNullOrEmpty(message))
 {
-    <script>
-        var myModal = new bootstrap.Modal(document.getElementById('alertModal'), {
-            keyboard: false
-        });
-        myModal.show();
-    </script>
+    <div class="alert alert-info"
+        style="border: 1px solid #d4edda; background-color: #d4edda; color: #155724; padding: 10px; border-radius: 5px; display: flex; justify-content: center;align-items: center;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check-circle"
+            viewBox="0 0 16 16" style="margin-right: 10px;">
+            <path
+                d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm3.97-9.03a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 0 1 1.06-1.06L8 9.69l3.47-3.72z" />
+        </svg>
+        
+        @message
+    </div>
 }
 
 
@@ -187,7 +189,7 @@
                         {
                             <div class="carousel-item active">
                                 <img src="@Model.ListaCategorias[i].RutaImagen" alt="Vehiculo" class="d-block mx-auto"
-                                    width="700" height="400" /> <>
+                                    width="700" height="400" /> 
                                 <div class="carousel-caption d-none d-md-block text-center mt-3">
                                     <h5>@Model.ListaCategorias[i].tipo_vehiculo</h5>
                                 </div>
@@ -197,7 +199,7 @@
                         {
                             <div class="carousel-item">
                                 <img src="@Model.ListaCategorias[i+1].RutaImagen" alt="Vehiculo" class="d-block mx-auto"
-                                    width="700" height="400" /> <>
+                                    width="700" height="400" /> 
                                 <div class="carousel-caption d-none d-md-block text-center mt-3">
                                     <h5>@Model.ListaCategorias[i + 1].tipo_vehiculo</h5>
                                 </div>
