--- a/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
+++ b/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
@@ -12,7 +12,7 @@
         @foreach (var item in Model.ListaCategorias)
 {
         
-            <div class="col-6 bg-light mt-4">
+            <div id="categoria" class="col-6 bg-light mt-4">
                 <div style="text-align: center;">
                     <br>
                     <h5 style="color: #007bff;">@item.tipo_vehiculo</h5>
