--- a/Reserva_Vehiculos/Views/DatosPersonales/DatosPersonales.cshtml
+++ b/Reserva_Vehiculos/Views/DatosPersonales/DatosPersonales.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="container text-center">
+<div id="datos-personales" class="container text-center">
     <form method="post" asp-action="Enviar_DatosPersonales" asp-controller="DatosPersonales">
         <h1>Datos Personales</h1><br>
         <div class="row justify-content-center">
