--- a/Reserva_Vehiculos/Views/ListadoReserva/ListadoReserva.cshtml
+++ b/Reserva_Vehiculos/Views/ListadoReserva/ListadoReserva.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container text-center">
+<div id="listado-reserva" class="container text-center">
     <h1>Listado de reservas</h1><br><br>
     <table class="table">
         <thead>
