--- a/Reserva_Vehiculos/Views/User/Login.cshtml
+++ b/Reserva_Vehiculos/Views/User/Login.cshtml
@@ -4,9 +4,9 @@
   Layout = "~/Views/Shared/_Layout_Modifi.cshtml";
 }
 
-<body style="background-color: #E8F3FC;">
+<body id="login-body">
   
-  <div class="card bg-light mt-lg-5 mx-auto text-center" style="max-width: 500px; height: 500px;">
+  <div id="login-container" class="card bg-light mt-lg-5 mx-auto text-center" style="max-width: 500px; height: 500px;">
     <h1>Login</h1>
     <main class="form-signin" style="max-width: 400px; margin: 0 auto;">
       <nav class="navbar bg-body-tertiary d-flex justify-content-center">
