--- a/Reserva_Vehiculos/Views/RegistroVehiculo/RegistroVehiculo.cshtml
+++ b/Reserva_Vehiculos/Views/RegistroVehiculo/RegistroVehiculo.cshtml
@@ -5,7 +5,7 @@
 }
 
 <form method="post" asp-action="RegistroVehiculo" asp-asp-controller="RegistroVehiculo">
-    <div class="container text-center">
+    <div id="registro-vehiculo" class="container text-center">
         <h1>Registro de vehículos</h1><br>
         <div class="row justify-content-center">
             <div class="col-md-4">
