--- a/Reserva_Vehiculos/Views/ListadoReserva/MisReservas.cshtml
+++ b/Reserva_Vehiculos/Views/ListadoReserva/MisReservas.cshtml
@@ -38,6 +38,7 @@
             </tr>
         }
     </table>
+    <a href="@Url.Action("reporte2", "Peticion")" class="btn-generar-pdf">Generar Excel</a>
     <a href="@Url.Action("peticion", "Peticion")" class="btn btn-primary btn-lg">Volver</a>
 
 </div>
